20240228/demo/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: demo
  name: nginx
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
  - name: web
    port: 80
    targetPort: 80
