20240228/demo/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: demo
  name: ingress
  annotations:
    kubernets.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
  - host: "demo.iotguru.dev"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: nginx
            port:
              number: 80
